--- a/Article/style.css
+++ b/Article/style.css
@@ -245,10 +245,13 @@ color: #000000;
 .footer {
   width: 100%;
   height: 225px;
-
-  margin: auto;
-  margin-top: 60px;
+  margin-top: 40px;
   background-color: #295093;
+}
+
+.footer__container{
+  width: 1400px;
+  height: 194px;
 }
 
 .footer_above_part {
@@ -258,7 +261,7 @@ color: #000000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 28px;
+  padding-top: 18px;
 }
 
 .footer_logo {
@@ -322,12 +325,12 @@ color: #000000;
 }
 
 .footer_bottom_part {
-  width: 979px;
+  width: 1400px;
   height: 121px;
   display: flex;
-  justify-content: space-between;
-  margin-left: 59px;
-  margin-top: 16px;
+  gap: 110px;
+  margin: 16px auto;
+
 }
 
 .footer_ul {
@@ -340,7 +343,6 @@ color: #000000;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
 }
 
@@ -350,7 +352,6 @@ color: #000000;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
   margin-bottom: 10px;
 }
