--- a/Contact/style.css
+++ b/Contact/style.css
@@ -225,10 +225,13 @@ color: #FFFFFF;
 .footer {
   width: 100%;
   height: 225px;
-
-  margin: auto;
   margin-top: 40px;
   background-color: #295093;
+}
+
+.footer__container{
+  width: 1400px;
+  height: 194px;
 }
 
 .footer_above_part {
@@ -238,7 +241,7 @@ color: #FFFFFF;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 28px;
+  padding-top: 18px;
 }
 
 .footer_logo {
@@ -302,12 +305,12 @@ color: #FFFFFF;
 }
 
 .footer_bottom_part {
-  width: 979px;
+  width: 1400px;
   height: 121px;
   display: flex;
-  justify-content: space-between;
-  margin-left: 59px;
-  margin-top: 16px;
+  gap: 110px;
+  margin: 16px auto;
+
 }
 
 .footer_ul {
@@ -320,7 +323,6 @@ color: #FFFFFF;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
 }
 
@@ -330,7 +332,6 @@ color: #FFFFFF;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
   margin-bottom: 10px;
 }
