--- a/Home/style.css
+++ b/Home/style.css
@@ -583,10 +583,13 @@
 .footer {
   width: 100%;
   height: 225px;
-
-  margin: auto;
   margin-top: 40px;
   background-color: #295093;
+}
+
+.footer__container{
+  width: 1400px;
+  height: 194px;
 }
 
 .footer_above_part {
@@ -596,7 +599,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 28px;
+  padding-top: 18px;
 }
 
 .footer_logo {
@@ -660,12 +663,12 @@
 }
 
 .footer_bottom_part {
-  width: 979px;
+  width: 1400px;
   height: 121px;
   display: flex;
-  justify-content: space-between;
-  margin-left: 59px;
-  margin-top: 16px;
+  gap: 110px;
+  margin: 16px auto;
+
 }
 
 .footer_ul {
@@ -678,7 +681,6 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
 }
 
@@ -688,7 +690,6 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
   margin-bottom: 10px;
 }
