--- a/List/style.css
+++ b/List/style.css
@@ -195,12 +195,13 @@
 
 .news2_btn {
   width: 246px;
-  height: 50px;
+
   margin: auto;
   background: #295093;
   border-radius: 5px;
   border: none;
   margin-top: 15px;
+  padding: 15px;
 }
 
 .news2_btn_linl {
@@ -292,10 +293,13 @@
 .footer {
   width: 100%;
   height: 225px;
-
-  margin: auto;
-  margin-top: 160px;
+  margin-top: 150px;
   background-color: #295093;
+}
+
+.footer__container{
+  width: 1400px;
+  height: 194px;
 }
 
 .footer_above_part {
@@ -305,7 +309,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 28px;
+  padding-top: 18px;
 }
 
 .footer_logo {
@@ -369,12 +373,12 @@
 }
 
 .footer_bottom_part {
-  width: 979px;
+  width: 1400px;
   height: 121px;
   display: flex;
-  justify-content: space-between;
-  margin-left: 59px;
-  margin-top: 16px;
+  gap: 110px;
+  margin: 16px auto;
+
 }
 
 .footer_ul {
@@ -387,7 +391,6 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
 }
 
@@ -397,7 +400,6 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-
   color: #ffffff;
   margin-bottom: 10px;
 }
